[package]
name = "demoloops-ui"
version = "0.1.0"
authors = ["Tanner Rogalsky <tanner@tannerrogalsky.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solstice-2d = "0.2"
eyre = "0.6"
slotmap = { version = "1.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
typetag = "0.1"
dyn-clone = "1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
glutin = "0.25"

[dev-dependencies]
serde_json = "1.0"