[workspace]
members = [
    "nodes",
    "nodes-derive",
]

[package]
name = "demoloops-ui"
version = "0.1.0"
authors = ["Tanner Rogalsky <tanner@tannerrogalsky.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#solstice-2d = "0.2"
solstice-2d = { path = "../solstice/solstice-2d" }
ab_glyph = "0.2"
eyre = "0.6"
serde = { version = "1.0", features = ["derive"] }
typetag = "0.1"
nodes = { path = "nodes"}
slotmap = { version = "1.0", features = ["serde"] }
once_cell = "1.7"
itertools = "0.10"
mint = "0.5"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
glutin = "0.25"
serde_json = "1.0"