[package]
name = "nodes-derive"
version = "0.1.0"
authors = ["Tanner Rogalsky <tanner@tannerrogalsky.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
proc-macro-error = "1.0"
syn = { version = "1.0", features = ["derive"] }
quote = "1.0"

[dev-dependencies]
nodes = { path = "../nodes" }
