[package]
name = "nodes"
version = "0.1.0"
authors = ["Tanner Rogalsky <tanner@tannerrogalsky.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slotmap = { version = "1.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
typetag = "0.1"
dyn-clone = "1.0"
once_cell = "1.7"